--- a/page1.html
+++ b/page1.html
@@ -1,24 +1,10 @@
 <!DOCTYPE html>
 
-<html><body>
-    <h1>Javascript supports arrays with numerical indices but with arbitrarily typed elements</h1>
-    <p>values:
-    <script>
-    var values = [4,8,15,16,23,'forty-two'];
-    for (i = 0; i < values.length; i++) {
-      document.write(values[i] + ' ');
-    }
-    // you can also replace the for
-    // loop above using array functions
-    // like values.toString() and
-    // values.join(',')
-    </script>
-    </p>
-    <h1>Javascript also supports objects</h1>
-    <script>
-    var c1 = {name: 'USA', currency: 'dollar'};
-    var c2 = {name: 'France', language: 'French'};
-    document.write('<p>The currency of ' + c1.name + ' is the ' + c1.currency + '.</p>');
-    // see if you can use c2 to create a sentence.
-    </script>
-    </body></html>
+<html>
+    <svg width="100", height="100">
+        <circle cx="30", cy="30", r="10"></circle>
+        <circle cx="70", cy="30", r="10"></circle>
+        <rect x="20", y="50", width="60", height="20"></rect>
+    </svg>
+</html>
+
