--- a/page1.html
+++ b/page1.html
@@ -1,10 +1,18 @@
 <!DOCTYPE html>
-
 <html>
-    <svg width="100", height="100">
-        <circle cx="30", cy="30", r="10"></circle>
-        <circle cx="70", cy="30", r="10"></circle>
-        <rect x="20", y="50", width="60", height="20"></rect>
-    </svg>
+    <script src='https://d3js.org/d3.v5.min.js'></script>
+
+    <body>
+        <svg width="100", height="100">
+            <circle cx="30", cy="30", r="10"></circle>
+            <circle cx="70", cy="30", r="10"></circle>
+            <rect x="20", y="50", width="60", height="20"></rect>
+        </svg>
+    </body>
+    <script>
+        var colors = ["green", "red"]
+        d3.selectAll("circle").data(colors).attr("fill", function(d) {return d})
+        d3.select("rect").attr("height",10)
+    </script>
 </html>
 
