Fixed pie chart basic

--- a/page1.html
+++ b/page1.html
@@ -16,7 +16,7 @@
         var radius = Math.min(width, height) / 2 - margin
         
         // append svg object to div
-        var svg = d3.select("pie_chart")
+        var svg = d3.select("#pie_chart")
             .append("svg")
                 .attr("width", width)
                 .attr("height", height)
