--- a/page1.html
+++ b/page1.html
@@ -9,7 +9,7 @@
     <!-- load csv -->
     <script>
         async function init() {
-            data = await d3.csv("https://jcahn2.github.io/churn_modeling_clean.csv");
+            data = await d3.csv("https://github.com/jcahn2/jcahn2.github.io/blob/master/churn_modeling_clean.csv");
             console.log(data);
         }
     </script>
