--- a/page1.html
+++ b/page1.html
@@ -10,7 +10,7 @@
                 data = d3.csv("https://jcahn2.github.io/Mastercard_stock_history.csv");
 
                 ticker = data.slice(-130)
-                console.log(ticker)
+                console.log(data)
                 
                 // Declare the chart dimensions and margins.
                 const width = 928;
