--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,7 @@
             async function init() {
                 const data = await d3.csv("https://jcahn2.github.io/Mastercard_stock_history.csv");
                 
-                drawChart('.container',data)
+                chart('.container',data)
             }
         </script>
     </body>
