--- a/page1.html
+++ b/page1.html
@@ -11,8 +11,17 @@
         <div class="container"></div>
         <script>
             async function init() {
-                const data = await d3.csv("https://jcahn2.github.io/Mastercard_stock_history.csv");
-                
+                const data = await d3.csv("https://jcahn2.github.io/Mastercard_stock_history.csv")
+                    .row(function(d) {
+                        return {
+                            Date: d3.time.format('%Y-%m-%d').parse(d.Date),
+                            Open: +d.Open,
+                            High: +d.High,
+                            Low: +d.Low,
+                            Close: +d.Close,
+                            Volume: +d.Volume
+                        };
+                    });
                 chart('.container',data)
             }
         </script>
