--- a/page1.html
+++ b/page1.html
@@ -12,14 +12,14 @@
         <script>
             async function init() {
                 const data = await d3.csv("https://jcahn2.github.io/Mastercard_stock_history.csv",
-                    ({Date, Open, High, Low, Close, Volume}) => 
+                    ({date, open, high, low, close, volume}) => 
                         ({
-                            Date: new Date(Date),
-                            Open: +Open,
-                            High: +High,
-                            Low: +Low,
-                            Close: +Close,
-                            Volume: +Volume
+                            date: new Date(date),
+                            open: +open,
+                            high: +high,
+                            low: +low,
+                            close: +close,
+                            volume: +volume
                         })
                     );
 
