--- a/page1.html
+++ b/page1.html
@@ -13,12 +13,12 @@
             async function init() {
                 const data = await d3.csv("https://jcahn2.github.io/Mastercard_stock_history.csv",
                     function(d) {return {
-                                    Date: d3.timeParse("%Y-%m-%d")(d.Date),
-                                    Open: +d.Open,
-                                    High: +d.High,
-                                    Low: +d.Low,
-                                    Close: +d.Close,
-                                    Volume: +d.Volume
+                                    Date: d3.timeParse("%m/%d/%Y")(d.Date),
+                                    Open: d.Open,
+                                    High: d.High,
+                                    Low: d.Low,
+                                    Close: d.Close,
+                                    Volume: d.Volume
                                         }
                                 }
                 );
