--- a/page1.html
+++ b/page1.html
@@ -36,10 +36,10 @@
     </script>
 
     <body onload="init()">
-        <button onClick="chart1">
+        <button onClick="chart1()">
             chart 1
         </button>
-        <button onClick="chart2">
+        <button onClick="chart2()">
             chart 2
         </button>
         <div class="container1"></div>
