--- a/page1.html
+++ b/page1.html
@@ -28,9 +28,11 @@
     <!-- button functions -->
     <script>
         function chart1() {
+            d3.selectAll("svg > *").remove()
             chart('.container1',ticker1)
         }
         function chart2() {
+            d3.selectAll("svg > *").remove()
             chart('.container2',ticker2)
         }
     </script>
