--- a/page1.html
+++ b/page1.html
@@ -28,10 +28,10 @@
     <!-- button functions -->
     <script>
         function chart1() {
-            chart('.container1',ticker1)
+            chart('.container',ticker1)
         }
         function chart2() {
-            chart('.container2',ticker2)
+            chart('.container',ticker2)
         }
     </script>
 
@@ -42,9 +42,8 @@
         <button onClick="chart2()">
             chart 2
         </button>
-        <div class="container1"></div>
 
-        <div class="container2"></div>
+        <div class="container"></div>
     </body>
 
 </html>
