--- a/page1.html
+++ b/page1.html
@@ -21,6 +21,7 @@
                             }
             );
             ticker1 = data.slice(0,130)
+            console.log(ticker1[0])
             ticker2 = data.slice(131,300)
 
             chart('.container',ticker1)
