--- a/page1.html
+++ b/page1.html
@@ -2,6 +2,9 @@
 <html>
     <!-- Load d3.js -->
     <script src='https://d3js.org/d3.v5.min.js'></script>
+    <!-- Load d3-annotation -->
+    <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
+
 
     <!-- load chart script -->
     <script src="d3Chart.js"></script>
