--- a/page1.html
+++ b/page1.html
@@ -24,18 +24,11 @@
                             }
             );
             ticker_start = data.slice(-130);
-            ticker2020 = data.filter(function(d){
+            
+            ticker2008 = data.filter(function(d){
                 return (
-                    d.Date >= d3.timeParse("%Y-%m-%d")("2020-01-01") &&
-                    d.Date <= d3.timeParse("%Y-%m-%d")("2020-06-25")
-                )
-            });
-            // ticker1 = data.slice(-200);
-
-            ticker2018 = data.filter(function(d){
-                return (
-                    d.Date >= d3.timeParse("%Y-%m-%d")("2018-01-01") &&
-                    d.Date <= d3.timeParse("%Y-%m-%d")("2018-05-20")
+                    d.Date >= d3.timeParse("%Y-%m-%d")("2008-09-01") &&
+                    d.Date <= d3.timeParse("%Y-%m-%d")("2008-12-01")
                 )
             });
 
@@ -46,12 +39,21 @@
                 )
             });
 
-            ticker2008 = data.filter(function(d){
+            ticker2018 = data.filter(function(d){
                 return (
-                    d.Date >= d3.timeParse("%Y-%m-%d")("2008-09-01") &&
-                    d.Date <= d3.timeParse("%Y-%m-%d")("2008-12-01")
+                    d.Date >= d3.timeParse("%Y-%m-%d")("2018-01-01") &&
+                    d.Date <= d3.timeParse("%Y-%m-%d")("2018-05-20")
                 )
             });
+
+            ticker2020 = data.filter(function(d){
+                return (
+                    d.Date >= d3.timeParse("%Y-%m-%d")("2020-01-01") &&
+                    d.Date <= d3.timeParse("%Y-%m-%d")("2020-06-25")
+                )
+            });
+            // ticker1 = data.slice(-200);
+
 
             chart('.container',ticker_start);
         }
@@ -81,7 +83,7 @@
 
         function chart2018() {
             d3.selectAll('svg').remove();
-            chart('.container',chart2018);
+            chart('.container',ticker2018);
 
             // change year title
             document.getElementById("yearTitle")
@@ -98,17 +100,19 @@
         }
     </script>
 
+    <title>
+        MasterCard Stock Data
+    </title>
     <body onload="init()">
-        <title>Stock data</title>
         <div id="yearTitle">Year</div>
         <button onClick="chart2008()">
             2008
         </button>
         <button onClick="chart2015()">
-            2008
+            2015
         </button>
         <button onClick="chart2018()">
-            2008
+            2018
         </button>
         <button onClick="chart2020()">
             2020
