--- a/page1.html
+++ b/page1.html
@@ -100,11 +100,16 @@
         }
     </script>
 
-    <title>
-        MasterCard Stock Data
-    </title>
     <body onload="init()">
-        <div id="yearTitle">Year</div>
+        <div>
+            <h1>Title Here</h1>
+        </div>
+        <div>
+            <h3 id="yearTitle">Year</h3>
+            <p>
+                "description about drop in stocks for this year"
+            </p>
+        </div>
         <button onClick="chart2008()">
             2008
         </button>
