--- a/page1.html
+++ b/page1.html
@@ -125,6 +125,7 @@
 
         <div class="container"></div>
         <div id="tooltip"></div>
+        <div id="annotation"></div>
     </body>
 
 </html>
