--- a/page1.html
+++ b/page1.html
@@ -105,7 +105,7 @@
             <h1>Title Here</h1>
         </div>
         <div>
-            <h3 id="yearTitle">Year</h3>
+            <h3 id="yearTitle">2021</h3>
             <p>
                 "description about drop in stocks for this year"
             </p>
