update annotations and titles

--- a/page1.html
+++ b/page1.html
@@ -87,7 +87,10 @@
                 .innerHTML = "2015";
             document.getElementById("drop_event")
                 .innerHTML = `
-
+                    Over the years of 2015 to 2016, there was a series of global stock market sellofs
+                    that began around the month of June in 2015. For the US, the DJIA fell about 3.1%
+                    during trading hours on August 21, 2015. The effect can be seen by the drop in 
+                    MasterCard around the same month.
                 `;
 
         }
@@ -101,7 +104,11 @@
                 .innerHTML = "2018";
             document.getElementById("drop_event")
                 .innerHTML = `
-
+                    During the year 2018, there was a cryptocurrency crash that saw the value of many
+                    cryptocurrencies lose significant value, some such as Bitcoin for example dropping
+                    as much as 15%. However, during the months of the crash in January and February 
+                    of 2018, the MasterCard stock seemed to be steadily rising, unaffected by what is
+                    now known as the Bitcoin Crash or Great Grypto Crash.
                 `;
         }
 
@@ -114,7 +121,10 @@
                 .innerHTML = "2020";
             document.getElementById("drop_event")
                 .innerHTML = `
-
+                    The beginning of 2020 saw the Coronavirus Pandemic sweep the nations of the world, 
+                    naturally affecting the economies and therefore the stock markets. Beginning in 
+                    February, the stock prices dropped suddenly and dramatically, evident by the decline
+                    of even the MasterCard stocks.
                 `;
         }
     </script>
@@ -148,6 +158,11 @@
         </button>
         <button onClick="chart2020()">
             2020
+        </button>
+        <button>
+            <a href="https://jcahn2.github.io/final_page.html">
+                Overview
+            </a>
         </button>
 
         <div class="container"></div>
