--- a/page1.html
+++ b/page1.html
@@ -6,8 +6,9 @@
     <script src="https://rawgit.com/susielu/d3-annotation/master/d3-annotation.min.js"></script>
 
 
-    <!-- load chart script -->
+    <!-- load scripts -->
     <script src="d3Chart.js"></script>
+    <script src="d3Chart_all.js"></script>
 
     <!-- load csv -->
     <script>
