--- a/page1.html
+++ b/page1.html
@@ -162,7 +162,7 @@
             </p>
         </div>
         <div>
-            <h3 id="yearTitle">Overview</h3>
+            <h3 id="yearTitle">2006-2021</h3>
             <p id="drop_event">
                 More information about recessional events can be found at 
                 <a href="https://www.investopedia.com/timeline-of-stock-market-crashes-5217820#toc-notable-downturns">
