--- a/page1.html
+++ b/page1.html
@@ -160,7 +160,7 @@
                 <p>
                     Over recent years, there have been several crashes in the stock market.
                     These candlestick charts show the correlation of significant events through
-                    MasterCard stocks. 
+                    MasterCard stocks, where significant drops in the world economy are highlighted.
                 </p>
                 <p id="ref">
                     More information about recessional events can be found at 
