added github link

--- a/mastercard_stock_history.html
+++ b/mastercard_stock_history.html
@@ -599,6 +599,9 @@ button, input[type="submit"], input[type="reset"] {
                 <a href="https://d3-graph-gallery.com/graph/line_basic.html">D3 Line Chart Basic</a><br>
                 <a href="https://d3-graph-gallery.com/graph/line_select.html">D3 Line Select</a><br>
             </div>
+            <div>
+                <a href="https://github.com/jcahn2/jcahn2.github.io">github</a><br>
+            </div>
         </div>
         </center>
     </footer>
